--- a/tests/basic.html
+++ b/tests/basic.html
@@ -127,6 +127,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           assert.equal(imp.content.childNodes.length, 2);
           assert.equal(imp.content.firstChild.nodeName, "TD");
 
+          s = '<li>one</li><li>two</li>';
+          imp.innerHTML = s;
+          assert.equal(imp.innerHTML, s);
+          assert.equal(imp.content.childNodes.length, 2);
+          assert.equal(imp.content.firstChild.nodeName, "LI");
+
           s = '<!--Comment--><tr><td>Content</td></tr>';
           imp.innerHTML = s;
           assert.equal(imp.innerHTML, s);
