--- a/tests/runner.html
+++ b/tests/runner.html
@@ -15,7 +15,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
   var suites = [
-    'basic.html'
+    'basic.html',
+    'document-fragment.html'
   ];
 
   WCT.loadSuites(suites);
