--- a/tests/basic.html
+++ b/tests/basic.html
@@ -289,6 +289,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           assert.isDefined(window.executedTemplateScript, 'script should have executed but did not');
         });
 
+        test('importing empty template content works', function() {
+          var t = document.createElement('template');
+          document.importNode(t.content, true);
+        });
+
       });
     </script>
   </body>
