--- a/tests/basic.html
+++ b/tests/basic.html
@@ -110,6 +110,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           assert.equal(imp.content.textContent, div.textContent);
         });
 
+        test('innerHTML (nested)', function() {
+          if (!canInnerHTML) {
+            this.skip();
+          }
+          var imp = document.createElement('template');
+          assert.equal(imp.innerHTML, '');
+          var s = 'pre<div><template>Hi</template></div><div><template>Bye</template></div>post';
+          imp.innerHTML = s;
+          assert.equal(imp.innerHTML, s);
+        });
+
         test('clone', function() {
           var imp = document.createElement('template');
           var s = '<div>Hi</div>';
