Add test for innerHTML with comment nodes

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -121,6 +121,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           assert.equal(imp.innerHTML, s);
         });
 
+        test('innerHTML (comments)', function() {
+          if (!canInnerHTML) {
+            this.skip();
+          }
+          var imp = document.createElement('template');
+          assert.equal(imp.innerHTML, '');
+          var s = '<!-- This is a comment -->';
+          imp.innerHTML = s;
+          assert.equal(imp.innerHTML, s);
+        })
+
         test('clone', function() {
           var imp = document.createElement('template');
           var s = '<div>Hi</div>';
