--- a/tests/runner.html
+++ b/tests/runner.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <title>Template Tests</title>
 <meta charset="utf-8">
-<script src="../../web-component-tester/browser.js"></script>
+<script src="../node_modules/wct-browser-legacy/browser.js"></script>
 
 <script>
   var suites = [
