--- a/tests/basic.html
+++ b/tests/basic.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <title>Template Test</title>
     <script src="../template.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
+    <script src="../node_modules/wct-browser-legacy/browser.js"></script>
   </head>
   <body>
     <style>
