--- a/tests/basic.html
+++ b/tests/basic.html
@@ -427,7 +427,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           assert.isTrue(DOM.querySelector("template") instanceof HTMLTemplateElement);
         });
 
-        test('innerHTML (option element)', function() {
+        test('innerHTML on regular HTMLElement upgrades nested template', function() {
           var container = document.createElement('div');
           assert.equal(container.innerHTML, '');
           var innerHTML = "<template><span>In template</span></template>";
