--- a/tests/basic.html
+++ b/tests/basic.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var el = document.createElement('div');
           try {
             Object.defineProperty(el, 'innerHTML', {
-              get: function(){},
+              get: function(){}, // eslint-disable-line getter-return
               set: function(){}
             });
             return true;
@@ -387,7 +387,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var doc = document.implementation.createHTMLDocument('');
           var imp = doc.createElement('div');
           var t = document.createElement('template');
-          t.innerHTML = '<svg><template><circle cx="150" cy="150" r="100" fill="blue" /></template></svg>'
+          t.innerHTML = '<svg><template><circle cx="150" cy="150" r="100" fill="blue" /></template></svg>';
           imp.appendChild(t);
 
           var impClone = document.importNode(imp, true);
@@ -407,7 +407,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var doc = document.implementation.createHTMLDocument('');
           var imp = doc.createElement('div');
           var t = document.createElement('template');
-          t.innerHTML = '<svg><template><circle cx="150" cy="150" r="100" fill="blue" /></template></svg>'
+          t.innerHTML = '<svg><template><circle cx="150" cy="150" r="100" fill="blue" /></template></svg>';
           imp.appendChild(t);
 
           var impClone = imp.cloneNode(true);
